--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "hydration_tracker_app",
-    "slug": "hydration_tracker_app",
+    "slug": "droplet",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,6 +27,13 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "097e2229-8252-45eb-af0c-1cf108c1f95a"
+      }
+    },
+    "owner": "teafany"
   }
 }
