--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Droplet",
     "slug": "hydration_tracker_app",
+    "scheme": "droplet26",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
