--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/native": "^7.1.19",
     "expo": "~54.0.13",
@@ -16,6 +17,7 @@
     "expo-linking": "~8.0.8",
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
+    "firebase": "^12.9.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
