--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/native": "^7.1.19",
-    "expo": "~54.0.13",
-    "expo-constants": "~18.0.9",
+    "expo": "~54.0.22",
+    "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
@@ -24,6 +25,7 @@
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.21.0"
   },
   "private": true,
