--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.9.0",
+    "mongodb": "^7.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
