--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-gifted-charts": "^1.4.74",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "^15.15.3",
     "react-native-web": "^0.21.0"
   },
   "private": true,
   "devDependencies": {
+    "baseline-browser-mapping": "^2.10.0",
     "prettier": "^3.6.2"
   }
 }
